--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 			"NODE_VERSION": "lts/*"
 		}
 	},
-
+	"features": { "ghcr.io/devcontainers/features/sshd:1": {}
+		    },
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
