--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,11 @@
 			"NODE_VERSION": "lts/*"
 		}
 	},
-	"features": { "ghcr.io/devcontainers/features/sshd:1": {}
-		    },
+	"features": {
+    "ghcr.io/devcontainers/features/sshd:1": {
+        "version": "latest"
+    }
+},
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
