--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,21 +3,22 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
-			"VARIANT": "17",	//Can change to another of Java
+			"VARIANT": "17", //Can change to another of Java
 			"INSTALL_MAVEN": "false",
 			"INSTALL_GRADLE": "false",
 			"NODE_VERSION": "lts/*"
 		}
 	},
 	"features": {
-    "ghcr.io/devcontainers/features/sshd:1": {
-        "version": "latest"
-    }
-},
+		// ...existingFeatures,
+		"ghcr.io/devcontainers/features/sshd:1": {
+			"version": "latest"
+		}
+	},
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"settings": { 
+			"settings": {
 				"java.home": "/docker-java-home"
 			},
 			"extensions": [
@@ -29,5 +30,4 @@
 	"remoteUser": "vscode",
 	"onCreateCommand": "echo PS1='\"$ \"' >> ~/.bashrc" //Set Terminal Prompt to $
 }
-
 // DevContainer Reference: https://code.visualstudio.com/docs/remote/devcontainerjson-reference
